[package]
name = "quantum"
version = "0.1.3"
authors = ["Ben Eills <ben@beneills.com>"]
repository = "https://github.com/beneills/quantum.git"
homepage = "https://github.com/beneills/quantum/"
license = "MIT"
readme = "README.md"
documentation = "http://beneills.github.io/quantum/"
description = "Advanced Rust quantum computer simulator."

[features]
optimize = []

[dependencies]
float-cmp = "0.2.2"
rand = "0.3"
